<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Vistas.InicioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutHome1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="19dp"
            android:background="@color/azul_cielo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/tvTituloHome1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/inicio"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/latolight"
                android:layout_weight="1"
                android:gravity="start"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutHome1">

            <ImageView
                android:layout_width="410dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/logo"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutLogo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estacionamientos"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>


        <!-- CardView para mostrar un sector -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSector1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estacionamientos_supermercado_lider"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/latolight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revisa_la_disponibilidad"
                    android:textSize="16sp"
                    android:textColor="@color/azul_especial"
                    android:layout_marginTop="5dp"/>

                <Button
                    android:id="@+id/btnVerMas"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ver_mas"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/azul_especial"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>